# World-Travel-Guide

./: .gitignore  README.md  build.ts  index.html  my-fixes.patch  package-lock.json  package.json  server.ts  sw.js
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md
scripts/: test-pipeline.ts
src/: App.tsx  index.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: auxiliaryApi.ts  client.ts  imageGen.ts  imageGenTypes.ts  rateLimiter.ts  types.ts
src/components/: BackgroundMusic.tsx  ErrorBoundary.tsx  SettingsScreen.tsx
src/config/: migration.ts  storageKeys.ts
src/context/: GameContext.tsx  UISettingsContext.tsx
src/data/: builtinPresets.ts  modules.ts  worldLoader.ts  worlds-schema.ts  worlds.json
src/engine/: contextManager.ts  gameEngineCore.ts  macroEngine.ts  pipelineExecutor.ts  pipelineTypes.ts  promptAssembler.ts  responseExtractor.ts  types.ts  useGameEngine.ts  variableExtraction.ts  variableManager.ts  variableStructureDefs.ts  worldPersonality.ts
src/hooks/: useAiFill.ts  useCharacterHistory.ts  useCharacterPortrait.ts  useImageGen.ts  useIsMobile.ts  useNpcCreate.ts  useNpcFill.ts  useWizard.ts
src/memory/: compileFormatter.ts  memoryConfig.ts  memoryPipeline.ts  memoryPrompts.ts  memoryStore.ts  narrativeGraph.ts  narrativeParsers.ts  narrativePng.ts  normalize.ts  types.ts  useMemorySystem.ts
src/modules/: buildContext.ts  buildPipeline.ts  defaults.ts  index.ts  injector.ts  normalizeModule.ts  (+3 more)
(+161 files in other folders)
